casi completo, falta gestionar contactos vacios y tener en cuenta solamente numeros en la casilla de phone number

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,6 +1,6 @@
-NAME    = my_awesome_phoneBook
+NAME    = MyAwesomePhoneBook
 
-SRC     = main.cpp phoneBook.cpp contact.cpp
+SRC     = main.cpp PhoneBook.cpp Contact.cpp
 OBJ     = $(SRC:.cpp=.o)
 
 CC      = c++
